compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__assigning.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 52
expression: "\nfn go(x, y) {\n  let assert True = x\n  let assert False = x\n  let assert Nil = y\n}\n"
---
import { makeError } from "../gleam.mjs";

function go(x, y) {
  if (!x) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Assertion pattern match failed",
      { value: x }
    )
  }
  if (x) {
    throw makeError(
      "let_assert",
      "my/mod",
      4,
      "go",
      "Assertion pattern match failed",
      { value: x }
    )
  }
  if (y) {
    throw makeError(
      "let_assert",
      "my/mod",
      5,
      "go",
      "Assertion pattern match failed",
      { value: y }
    )
  }
  return y;
}
