compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__binop_panic_left.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n    panic && x\n}"
---
----- SOURCE CODE
pub fn negate(x) {
    panic && x
}

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function negate(x) {
  return (() => {
    throw makeError(
      "panic",
      FILEPATH,
      "my/mod",
      2,
      "negate",
      "`panic` expression evaluated.",
      {}
    )
  })() && x;
}
