compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__constants.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "\npub const a = True\npub const b = False\npub const c = Nil\n"
---
----- SOURCE CODE

pub const a = True
pub const b = False
pub const c = Nil


----- COMPILED JAVASCRIPT
export const a = true;

export const b = false;

export const c = undefined;
