compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__constants_typescript.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 29
expression: "\npub const a = True\npub const b = False\npub const c = Nil\n"
---
export const a: boolean;

export const b: boolean;

export const c: undefined;
