compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__expressions.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "\npub fn go() {\n    True\n    False\n    Nil\n}\n"
---
----- SOURCE CODE

pub fn go() {
    True
    False
    Nil
}


----- COMPILED JAVASCRIPT
export function go() {
  true;
  false;
  return undefined;
}
