compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__negate_panic.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n  !panic\n}"
---
----- SOURCE CODE
pub fn negate(x) {
  !panic
}

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function negate(x) {
  let _block;
  throw makeError(
    "panic",
    FILEPATH,
    "my/mod",
    2,
    "negate",
    "`panic` expression evaluated.",
    {}
  )
  return !_block;
}
