compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__negate_todo.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n  !todo\n}"
---
----- SOURCE CODE
pub fn negate(x) {
  !todo
}

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function negate(x) {
  let _block;
  throw makeError(
    "todo",
    FILEPATH,
    "my/mod",
    2,
    "negate",
    "`todo` expression evaluated. This code has not yet been implemented.",
    {}
  )
  return !_block;
}
