compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bools__nil_case.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "\npub fn go(a) {\n  case a {\n    Nil -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(a) {
  case a {
    Nil -> 0
  }
}


----- COMPILED JAVASCRIPT
export function go(a) {
  return 0;
}
